--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,7 @@
             </form>
         </div>
     </section>   
+    
 </body>
-<script src="index.js"></script>
+<script type="module" src="index.js"></script>
 </html>
