--- a/Index.html
+++ b/Index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
       
-    <section>
-        <h1>Books List</h1>
-        <div class="collection">
-        </div>
+    <section class="main-container">
+        <h1 class="All-books">All awesome books</h1>
+            <div class="collection">
+            </div>
+        
         <div class="inputs">
-            <form action="">
-                <input type="text" name="book" id="book" placeholder="title" required>
-                <input type="text" name="author" id="author" placeholder="author" required>
-                <input type="submit" name="" class="btn" id="submit">
+            <h2>Add a new book</h2>
+            <form action="" class="form-values">
+                <input type="text" class="input-container" name="book" id="book" placeholder="Title" required>
+                <input type="text" class="input-container" name="author" id="author" placeholder="Author" required>
+                <button type="submit" name="" class="btn" id="submit">Add</button>
             </form>
         </div>
     </section>   
