Fix linters and styling

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
         <h1 class="All-books">All awesome books</h1>
             <div class="collection">
             </div>
-        
+            <div class="border-line"></div>
         <div class="inputs">
             <h2>Add a new book</h2>
             <form action="" class="form-values">
