Add time and dat and fix linters

--- a/Index.html
+++ b/Index.html
@@ -20,11 +20,13 @@
                 <li id="Contact">Contact</li>
             </ul>
         </nav>
+        <div class="timeDate" id="timeDate"></div>
     </header>
 
     <section id="ListSection">
         <h1 class="heading-AwesomeBooks">All awesome books</h1>
-        <div class="collection">
+        <div class="collection-container">
+            <div class="collection"></div>
         </div>
     </section>
 
