Add contact details

--- a/Index.html
+++ b/Index.html
@@ -53,6 +53,10 @@
                 <span class="name">Hasnat Ali</span> <br>
                 <span class="email">Hasnatking1947@gmail.com</span> <br>
                 <span class="number">+92-3152323402</span>
+                <br> <br>
+                <span class="name">Mercy Mugambi</span> <br>
+                <span class="email">mercymugambi2016@gmail.com</span> <br>
+                <span class="number">+254-723460025</span>
             </div>
         </div>
     </section>
