--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
     </section>
 
     <section class="AddNew-Section" id="AddNewSection">
-        <h2 class="heading-AwesomeBooks">Add new books</h2>       
+        <h2 class="heading-AddnewBooks">Add new books</h2>       
         <div class="inputs">
             <form action="" class="form-values">
                 <div>
@@ -57,6 +57,9 @@
         </div>
     </section>
 
+    <footer>
+        © MIT License
+    </footer>
 </body>
 <script type="module" src="index.js"></script>
 </html>
