added img in contact section

--- a/Index.html
+++ b/Index.html
@@ -46,14 +46,17 @@
     <section class="ContactSection" id="ContactSection">
         <h2 class="heading-AwesomeBooks">Contact Information</h2>
         <div class="contactDiv">
-            <h3>Do you have any questions or you just want to say "Hello"? <br>
-            You can reach out to us!
-            </h3>
-            <div class="spanDiv">
-                <span class="name">Hasnat Ali</span> <br>
-                <span class="email">Hasnatking1947@gmail.com</span> <br>
-                <span class="number">+92-3152323402</span>
+            <div class="contactinnerdiv">
+                <h3>Do you have any questions or you just want to say "Hello"? <br>
+                    You can reach out to us!
+                </h3>
+                <div class="spanDiv">
+                    <span class="name">Hasnat Ali</span> <br>
+                    <span class="email">Hasnatking1947@gmail.com</span> <br>
+                    <span class="number">+92-3152323402</span>
+                </div>
             </div>
+            <div class="image"></div>
         </div>
     </section>
 
