change functions to arrow functions

--- a/Index.html
+++ b/Index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome-books</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-      
+   
     <header>
         <nav>
             <h2 class="nav-h1">
@@ -59,7 +59,7 @@
             <div class="image"></div>
         </div>
     </section>
-
+    
     <footer>
         © MIT License
     </footer>
